--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1> This is a change </h1>
-    <p>This is a paragraph</p>
+    <p>This is a paragraph and I am adding stuff </p>
 </body>
 </html>
